--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <header class="header">
         <h1>css flexbox photo gallery</h1>
     </header>
-    <div class="gallery"></div>
+    <div class="gallery">
+        <img>
+        <img>
+        <img>
+        <img>
+    </div>
 </body>
 
 </html>
