--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <img>
         <img>
         <img>
+        <img>
+        <img>
+        <img>
+        <img>
+        <img>
     </div>
 </body>
 
