--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>css flexbox photo gallery</h1>
     </header>
     <div class="gallery">
-        <img>
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
         <img>
         <img>
         <img>
