--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <div class="gallery">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
-        <img>
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
         <img>
         <img>
         <img>
