--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="gallery">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
-        <img>
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg">
         <img>
         <img>
         <img>
