--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg">
-        <img>
-        <img>
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg">
         <img>
         <img>
         <img>
