--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg">
-        <img>
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
         <img>
         <img>
         <img>
