--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg">
-        <img>
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
     </div>
 </body>
 
