--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>css flexbox photo gallery</h1>
     </header>
     <div class="gallery">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="cat">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="cat">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="cat">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
