--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="cat">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="cat">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="cat">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="cat">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="cat">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="cat">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
