--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>css flexbox photo gallery</h1>
     </header>
     <div class="gallery">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="cat-photo">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="catphoto">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="cat-photo">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="cat-photo">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="cat-photo">
