--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="gallery">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="catphoto">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="catphoto">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="cat-photo">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="catphoto">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="cat-photo">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="cat-photo">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="cat-photo">
