--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="catphoto">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="catphoto">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="catphoto">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="cat-photo">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="catphoto">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="cat-photo">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="cat-photo">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="cat-photo">
