--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="catphoto">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="catphoto">
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="catphoto">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="cat-photo">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="catphoto">
     </div>
 </body>
 
